# zero_fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  README.pt-br.md  main.py  pyproject.toml
app/: main.py
scripts/: precommit_pytest.sh
tests/: test_main.py
